src/component/LandingPageV2/Management/style.css
#skills {
    width: min(64vh, 90vw);
    height: min(64vh, 90vw);
    left:12.36vh;
    transform: rotate(320deg);
    /* margin-left: 12.36vh; */
    /* margin-top: 12.36vh; */
  }
  
  .center {
    position: absolute;
    top: min(18.54vh, 23vw);
    left: min(20vh, 24vw);
    z-index: 1000;
    border: 12.36vh solid white;
    border-radius: 50%;
}

  .circle {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    position: absolute;
    border: black;
  }
  
  .animate {
    -webkit-transition: 0.2s cubic-bezier(.74,1.13,.83,1.2);
    -moz-transition: 0.2s cubic-bezier(.74,1.13,.83,1.2);
    -o-transition: 0.2s cubic-bezier(.74,1.13,.83,1.2);
    transition: 0.2s cubic-bezier(.74,1.13,.83,1.2);
  }
  
  .animate:hover {
    transform: scale(1.1);
    transform-origin: center center;
  }
  
  #part1 {
    background-color: #FFBF3C;
    -webkit-clip-path: polygon(50% 0, 50% 50%, 100% 41.2%, 100% 0);
    clip-path: polygon(50% 0, 50% 50%, 100% 41.2%, 100% 0);
  }
  
  #part2 {
    background-color: #6FCF97;
    -webkit-clip-path: polygon(50% 50%, 100% 41.2%, 100% 100%, 63.4% 100%);
    clip-path: polygon(50% 50%, 100% 41.2%, 100% 100%, 63.4% 100%);
  }
  
  #part3 {
    background-color:  #187DFF;
    -webkit-clip-path: polygon(50% 50%, 36.6% 100%, 63.4% 100%);
    clip-path: polygon(50% 50%, 0% 100%, 63.4% 100%);
  }
  
  
  #part4 {
    background-color: #FF6660;
    -webkit-clip-path: polygon(50% 50%, 0 36.6%, 0 100%);
    clip-path: polygon(50% 50%, 0 36.6%, 0 100%);
  }
  
  #part5 {
    background-color: #A559EC;
    -webkit-clip-path: polygon(50% 50%, 0 36.6%, 0 0, 50% 0);
    clip-path: polygon(50% 50%, 0 36.6%, 0 0, 50% 0);
  }

  #title {
    left: 52vw;
    top: 20vw;
    font-family: 'Space Mono 700';
    font-size: 8.9vh;
    line-height: 11.37vh;
    padding-top: 30%;
  }

  #description {
    width: 80%;
    font-family: 'Outfit 300';
    font-size: 2.47vh;
    line-height: 3.7vh;
    margin-top: 2%;
  }

  .image1 {
    width: 20%;
    height: 20%;
    z-index: 100;
    margin-bottom: 70%;
    transform: rotate(40deg);
    margin-left: 45%;
    margin-top: 13%;
  }

  .image2 {
    width: 20%;
    height: 20%;
    z-index: 100;
    margin-bottom: 70%;
    transform: rotate(40deg);
    margin-left: 60%;
    margin-top: 58%;
  }

  .image3 {
    width: 20%;
    height: 18%;
    z-index: 100;
    margin-bottom: 70%;
    transform: rotate(40deg);
    margin-right: 18%;
    margin-top: 77%;
  }


  .image4 {
    width: 20%;
    height: 18%;
    z-index: 100;
    margin-bottom: 70%;
    transform: rotate(40deg);
    margin-right: 70%;
    margin-top: 50%;
  }


  .image5 {
    width: 20%;
    height: 20%;
    z-index: 100;
    margin-bottom: 70%;
    transform: rotate(40deg);
    margin-right: 45%;
    margin-top: 15%;
  }

  .button {
    width: 20vh;
    font-family: 'Outfit 300';
    font-size: 2.47vh;
    line-height: 3.7vh;
    margin-top: 10%;
  }

  .management-spacer {
    width: max(10vw, 25vh);
    margin: 0vw;
    padding: 0vw;
    background: white;
  }

  .management-wheel {
    width: 90vh;
    margin: 0vw;
    padding: 5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    background: white;
  }

  .management-text {
    width: 70vh;
    margin: 0vw;
    padding: 2.3vw;
    background: white;
  }

  
@media only screen and (max-device-width: 650px) {
  .management-wheel {
    width: 100vw;
  }

  .management-text {
    width: 100vw;
    padding: 7vw;
  }

  #title {
    font-size: 13vw;
    padding-top:0%
  }

  #description {
    width: 100%;
  }
  
}

